test/tests/stages/16_characters_and_strings/valid/extra_credit/char_consts_as_cases.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[49]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(i)
  =
  const int(65)
  ;
  switch
  (
  identifier(i)
  )
  {
  case
  const long(100l)
  :
  return
  const int(1)
  ;
  case
  const char('A')
  :
  return
  const int(0)
  ;
  case
  const char('B')
  :
  return
  const int(2)
  ;
  case
  const unsigned int(2000u)
  :
  return
  const int(3)
  ;
  default
  :
  return
  -
  const int(1)
  ;
  }
  }
