test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/case_statement_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(0)
  )
  {
  case
  string literal("foo")
  :
  return
  const int(1)
  ;
  default
  :
  return
  const int(0)
  ;
  }
  }
